--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-bs-level="1"><a href="#sitio-del-senor-destrutor-de-mundos" class="nav-link">Sitio del señor destrutor de mundos</a>
+            <li class="nav-item" data-bs-level="1"><a href="#sitio-de-sami-benomar-megri" class="nav-link">Sitio de Sami Benomar Megri</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-bs-level="2"><a href="#commands" class="nav-link">Commands</a>
               <ul class="nav flex-column">
@@ -93,7 +93,7 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="sitio-del-senor-destrutor-de-mundos">Sitio del señor destrutor de mundos</h1>
+<h1 id="sitio-de-sami-benomar-megri">Sitio de Sami Benomar Megri</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
@@ -189,5 +189,5 @@ docs/
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-03-09 10:19:46.937014+00:00
+Build Date UTC : 2025-03-09 10:20:06.150858+00:00
 -->
